@@ -142,7 +142,7 @@
     <Compile Include="Metadata\UserOrganizationMetadata.cs" />
     <Compile Include="Metadata\UserResourcePoolMetadata.cs" />
     <Compile Include="Metadata\UserSectorRatingMetadata.cs" />
-    <Compile Include="Dto\UserResourcePoolOrganizationDto2.cs" />
+    <Compile Include="ViewModels\UserOrganization.cs" />
     <Compile Include="UserResourcePoolType.cs" />
     <Compile Include="IEntity.cs" />
   </ItemGroup>
